Remove the cut off of the terrarium AND fix the statement cards

--- a/styles.css
+++ b/styles.css
@@ -1538,7 +1538,6 @@ fieldset {
 
   .custom-designs {
     background: url('images/terrarium_planter.jpeg');
-    background-repeat: no-repeat;
     background-size: cover;
     background-position: 30% -180%;
   }
@@ -1557,7 +1556,7 @@ fieldset {
 
   .standout-square div p {
     margin-left: -2.9rem;
-    margin-top: 31.85rem;
+    margin-top: 21.85rem;
     width: 120%;
     padding: 2.5rem;
     font-size: 2.5rem;
